--- a/app/src/main/res/layout/activity_neighbor_type.xml
+++ b/app/src/main/res/layout/activity_neighbor_type.xml
@@ -15,5 +15,34 @@
         android:layout_height="match_parent"
         tools:context=".feature.tab_neighbor.neighbor_type.NeighborTypeActivity">
 
+        <ImageView
+            android:id="@+id/backIv"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="?actionBarItemBackground"
+            android:onClick="@{() -> viewModel.finishActivity()}"
+            android:padding="@dimen/dimen_8"
+            android:src="@drawable/ic_back_black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/typeTv"
+            style="@style/FontTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:text="@{viewModel.typeLiveData}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/backIv" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/typeTv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
